--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "serve": "^13.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
