--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "rsuite": "^5.8.1",
     "sass": "^1.49.0",
     "serve": "^13.0.2"
   },
